# Port4

./: .env.example  .gitignore  CLI_GUIDE.md  DEMO.md  HANDOFF.md  PHASE_2.md  README.md  benchmark_timing.py  cli.py  eval_dataset.py  eval_harness.py  eval_results_baseline.json  input_guard.py  main.py  pyproject.toml  route_ticket.py  schemas.py  semantic_memory.py  ticket_log.py
frontend/: README.md  app.js  index.html  styles.css
