[project]
name = "port4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncio>=4.0.0",
    "chromadb>=1.5.9",
    "fastapi>=0.128.8",
    "openai>=2.45.0",
    "openai-agents>=0.8.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.39.0",
]
